# Kanji2Vocab

./: .gitignore  Kanji2Vocab.bkup1.py  Kanji2Vocab.bkup2.py  Kanji2Vocab.py  README.md  auto_instrumentation_setup.py  config.json  dev_note.md  env_example.txt  list_analyzers.py  pyproject.toml  requirements.txt  test_openai_api.py
__old k2v/: Kanji2Vocab_old.py  planned_map_old.txt
kanji2vocab/: __init__.py  __main__.py  cli.py  config.py  controller.py  models.py
kanji2vocab/errors/: __init__.py  base.py  decorators.py  handler.py
kanji2vocab/services/: ai.py  anki.py  audio.py  formatter.py  logger.py  pagination.py  scraper.py  stroke.py  ui.py  utils.py
