[project]
name = "kanji2vocab-oop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "elevenlabs>=2.39.0",
    "openai>=2.26.0",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
]
